--- a/themes/mainroad/layouts/partials/menu.html
+++ b/themes/mainroad/layouts/partials/menu.html
@@ -6,9 +6,13 @@
 	<ul class="menu__list">
 		{{- $currentNode := . }}
 		{{- range sort .Site.Menus.main }}
-		{{- if .Name}}
-		<li class="menu__item{{if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{end}}">
-			<a class="menu__link" href="{{ .URL }}">{{ .Name }}</a>
+		{{- if .Name }}
+		<li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
+			<a class="menu__link" href="{{ .URL }}">
+				{{ .Pre }}
+				<span class="menu__text">{{ .Name }}</span>
+				{{ .Post }}
+			</a>
 		</li>
 		{{- end }}
 		{{- end }}
