--- a/themes/mainroad/layouts/partials/widgets/categories.html
+++ b/themes/mainroad/layouts/partials/widgets/categories.html
@@ -1,14 +1,17 @@
-{{- if isset .Site.Taxonomies "categories" }}
-{{- if not (eq (len .Site.Taxonomies.categories) 0) }}
+{{- $categories := .Site.Taxonomies.categories }}
+{{- if gt (len $categories) 0 }}
 <div class="widget-categories widget">
 	<h4 class="widget__title">{{ T "categories_title" }}</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
-			{{- range $name, $items := .Site.Taxonomies.categories }}
-			<li class="widget__item"><a class="widget__link" href="{{ "categories/" | relLangURL }}{{ $name | urlize | lower }}">{{ $name | title | humanize }}</a></li>
+		{{- range $name, $taxonomy := $categories }}
+			{{- with $.Site.GetPage (printf "/categories/%s" $name) }}
+			<li class="widget__item">
+				<a class="widget__link" href="{{ .RelPermalink }}">{{ .Title }}</a>
+			</li>
 			{{- end }}
+		{{- end }}
 		</ul>
 	</div>
 </div>
-{{- end }}
 {{- end }}
