--- a/themes/fuji/layouts/partials/head.html
+++ b/themes/fuji/layouts/partials/head.html
@@ -44,3 +44,18 @@
 {{ end }}
 {{ partial "analytic-gtag.html" . }}
 {{ partial "analytic-cfga.html" . }}
+<script>
+        window.onload = function () {
+           if (isTencent()) { 
+                alert('系统检测出来你使用了腾讯系浏览器,访问被禁止');
+				document.execCommand("stop");
+				var opened = window.open('about:blank', '_self');
+				opened.opener = null;
+				opened.close();
+            }
+        }
+        function isTencent(){
+            var ua = navigator.userAgent.toLowerCase();
+            return ua.indexOf("micromess") > 1||ua.indexOf("qqbrow")>1;
+        }
+</script>
