--- a/themes/fuji/layouts/partials/head.html
+++ b/themes/fuji/layouts/partials/head.html
@@ -31,7 +31,7 @@
 <!-- dep -->
 {{ partial "styles.html" . }}
 {{ $options := (dict "targetPath" "assets/css/fuji.min.css" "outputStyle" "compressed") }}
-{{ $style := resources.Get "scss/fuji.scss" | resources.ToCSS $options }}
+{{ $style := resources.Get "scss/fuji.scss" |  css.Sass $options }}
 <link rel="stylesheet" href="{{ $style.Permalink }}" />
 {{ with .Site.Params.googleAdsense }}
 <script async data-ad-client="ca-pub-{{ . }}" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -42,8 +42,7 @@
 {{ if .Site.Params.useDisqusJS }}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/disqusjs@1.3/dist/disqusjs.css" />
 {{ end }}
-{{ partial "analytic-gtag.html" . }}
-{{ partial "analytic-cfga.html" . }}
+
 <script>
 function isTencent(){
             var ua = navigator.userAgent.toLowerCase();
